--- a/AKRDforORCAS.lyx
+++ b/AKRDforORCAS.lyx
@@ -275,7 +275,7 @@ require(knitr)
 
 \begin_layout Plain Layout
 
-opts_chunk$set(echo=FALSE, include=FALSE, fig.lp="fig:")
+opts_chunk$set(echo=FALSE, include=FALSE, fig.lp="fig:", dev='png', dpi=100)
 \end_layout
 
 \begin_layout Plain Layout
@@ -487,7 +487,7 @@ if (ReloadData) {
 
 \begin_layout Plain Layout
 
-    if (nflt == 18) {RFB <- 0.40}
+    if (flt == 18) {RFB <- 0.40}
 \end_layout
 
 \begin_layout Plain Layout
@@ -528,12 +528,18 @@ c
 
 \begin_layout Plain Layout
 
-    D$K <- (500 / TOW) * (TOW - D$TF * RFB) / D$QCF
+    D$K <- (500 / TOW) * (TOW - D$TF * RFB) / (D$QCF * cos (D$ROLL * pi
+ / 180))
 \end_layout
 
 \begin_layout Plain Layout
 
     D$QR <- D$ADIFR / D$QCF
+\end_layout
+
+\begin_layout Plain Layout
+
+    D$QR[D$QCF < 20] <- NA
 \end_layout
 
 \begin_layout Plain Layout
@@ -644,37 +650,27 @@ c
 
 \begin_layout Plain Layout
 
-    rf <- c(1:900, (nrow(D)-1200):nrow(D))
+    ## limit to times between first TASX > 90 and last TASX > 90:
 \end_layout
 
 \begin_layout Plain Layout
 
-    # D$MF[rf] <- NA
+    TS <- D$Time[D$TASX > 90]
 \end_layout
 
 \begin_layout Plain Layout
 
-    # D$MS[rf] <- NA
+    TS <- TS[!is.na(TS)]
 \end_layout
 
 \begin_layout Plain Layout
 
-    # D$QRS[rf] <- NA
+    B <- TS[1]; E <- TS[length(TS)]
 \end_layout
 
 \begin_layout Plain Layout
 
-    # D$QRF[rf] <- NA
-\end_layout
-
-\begin_layout Plain Layout
-
-    D$AOAREFF[rf] <- NA
-\end_layout
-
-\begin_layout Plain Layout
-
-    D$AOAREFS[rf] <- NA
+    D <- D[D$Time >= B & D$Time <= E,]
 \end_layout
 
 \begin_layout Plain Layout
@@ -1543,8 +1539,8 @@ and in turn the coefficient of lift depends approximately linearly on the
 
  therefore changes with changes in aircraft configuration.
  The lift will normally be matched approximately to the weight of the aircraft
- except during short periods of vertical acceleration at the start and end
- of climbs and descents.
+ except during turns and short periods of vertical acceleration at the start
+ and end of climbs and descents.
 \begin_inset Foot
 status open
 
@@ -1581,7 +1577,7 @@ A first-order correction would be
  
 \begin_inset Formula 
 \begin{equation}
-c_{L}A=\frac{2W(t)}{\rho_{a}V^{2}}=\frac{W(t)}{q}\label{eq:CLA}
+c_{L}A=\frac{2W(t)}{\rho_{a}V^{2}\cos\phi}=\frac{W(t)}{q\thinspace\cos\phi}\label{eq:CLA}
 \end{equation}
 
 \end_inset
@@ -1590,7 +1586,11 @@ where
 \begin_inset Formula $q=\rho_{a}V^{2}/2$
 \end_inset
 
- is the dynamic pressure, so if 
+ is the dynamic pressure and 
+\begin_inset Formula $\phi$
+\end_inset
+
+ is the roll angle, so if 
 \begin_inset Formula $K$
 \end_inset
 
@@ -1601,7 +1601,7 @@ where
 
 \begin_inset Formula 
 \begin{equation}
-K=\frac{aW(t)}{q}\label{eq:K}
+K=\frac{aW(t)}{q\thinspace\cos\phi}\label{eq:K}
 \end{equation}
 
 \end_inset
@@ -1737,7 +1737,12 @@ with (D6, hist (K/AOAREF, breaks=100, xlim=c(0.5,2)))
 
 \begin_layout Plain Layout
 
-rg <- setRange(D6, 164500, 223500)
+# rg <- setRange(D6, 164500, 223500)
+\end_layout
+
+\begin_layout Plain Layout
+
+rg <- 301:(nrow(D6)-300)
 \end_layout
 
 \begin_layout Plain Layout
@@ -1752,7 +1757,12 @@ K <- D6$K
 
 \begin_layout Plain Layout
 
-K[D6$K/D6$AOAREF > 1.45] <- NA
+KBreak <- 1.45
+\end_layout
+
+\begin_layout Plain Layout
+
+K[D6$K/D6$AOAREF > KBreak] <- NA
 \end_layout
 
 \begin_layout Plain Layout
@@ -1913,7 +1923,7 @@ GG <- D6$GGALT
 
 \begin_layout Plain Layout
 
-GG[D6$K/D6$AOAREF > 1.45] <- NA
+GG[D6$K/D6$AOAREF > KBreak] <- NA
 \end_layout
 
 \begin_layout Plain Layout
@@ -2284,28 +2294,78 @@ status open
 
 \begin_layout Plain Layout
 
-Test <- Data$RF == 1 | Data$RF == 2 | Data$RF == 3 | Data$RF == 6 | Data$RF
+# Test <- Data$RF == 1 | Data$RF == 2 | Data$RF == 3 | Data$RF == 6 | Data$RF
  == 8 | Data$RF == 9
 \end_layout
 
 \begin_layout Plain Layout
 
-Test <- Test | Data$RF == 11 | Data$RF == 14 | Data$RF == 18
+# Test <- Test | Data$RF == 11 | Data$RF == 14 | Data$RF == 18
 \end_layout
 
 \begin_layout Plain Layout
 
-Test[is.na(Test)] <- FALSE
+# Test[is.na(Test)] <- FALSE
 \end_layout
 
 \begin_layout Plain Layout
 
-DF <- Data[Test & Data$TASX > 110 & abs(Data$ROLL) < 2, ]
 \end_layout
 
 \begin_layout Plain Layout
 
-# Test <- Test & Data$K/Data$AOAREF > 1.45
+## eliminate 600 s at start and end of flights to avoid filter start-up
+ deviations
+\end_layout
+
+\begin_layout Plain Layout
+
+DF <- data.frame()
+\end_layout
+
+\begin_layout Plain Layout
+
+best <- c(1,2,3,6,8,9,11,14,18)
+\end_layout
+
+\begin_layout Plain Layout
+
+for (flt in best) {
+\end_layout
+
+\begin_layout Plain Layout
+
+  if (flt == 12) {next}
+\end_layout
+
+\begin_layout Plain Layout
+
+  D <- Data[Data$RF == flt, ]
+\end_layout
+
+\begin_layout Plain Layout
+
+  D <- D[601:(nrow(D)-600), ]
+\end_layout
+
+\begin_layout Plain Layout
+
+  DF <- rbind (DF, D)
+\end_layout
+
+\begin_layout Plain Layout
+
+}  
+\end_layout
+
+\begin_layout Plain Layout
+
+DF <- DF[DF$TASX > 110 & abs(DF$ROLL) < 2, ]
+\end_layout
+
+\begin_layout Plain Layout
+
+# Test <- Test & Data$K/Data$AOAREF > KBreak
 \end_layout
 
 \begin_layout Plain Layout
@@ -2768,16 +2828,33 @@ status open
 
 \begin_layout Plain Layout
 
-<<filterfit, include=TRUE, fig.cap=c('The high-pass value of the reference
- angle $
+
+\backslash
+clearpage
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
+
+<<filterfit, include=TRUE, fig.height=5, fig.cap=c('The high-pass value of
+ the reference angle $
 \backslash
 
 \backslash
 alpha^*_f$ plotted vs.
- the high-pass version of the ratio of ADIFR to QCF, for ORCAS flight 6.',
- 'The low-pass component of the reference AOAREFS and the result from the
- fit to this component for the five-coefficient fit, for ORCAS flight 6.',
- 'The vertical wind obtained by calculating the two filtered components
+ the high-pass version of the ratio of ADIFR to QCF, for the combined flights
+ 1, 2, 3, 6, 8, 9, 11, 14, and 18 from the ORCAS project.', 'The low-pass
+ component of the reference AOAREFS and the result from the fit to this
+ component for the five-coefficient fit, for ORCAS flight 6.', 'The vertical
+ wind for ORCAS flight 6, obtained by calculating the two filtered components
  separately and adding them to obtain the angle of attack (red line).
  Also shown is the fit result obtained using the five-coefficient fit from
  the previous section (green line) and the result of filtering WIK (cyan
@@ -2790,43 +2867,22 @@ alpha^*_f$ plotted vs.
 
 \begin_layout Plain Layout
 
-## exclude these flights: 4,5,7,10, 12,13,15,16,17,19
+#DF <- DF[DF$Test > KBreak,]
 \end_layout
 
 \begin_layout Plain Layout
 
-Test <- Data$RF == 1 | Data$RF == 2 | Data$RF == 3 | Data$RF == 6 | Data$RF
- == 8 | Data$RF == 9
-\end_layout
-
-\begin_layout Plain Layout
-
-Test <- Test | Data$RF == 11 | Data$RF == 14 | Data$RF == 18
-\end_layout
-
-\begin_layout Plain Layout
-
-DF <- Data[Test & Data$TASX > 110 & abs(Data$ROLL) < 2, ]
-\end_layout
-
-\begin_layout Plain Layout
-
-# DF <- DF[901:(nrow(DF)-1200),]
-\end_layout
-
-\begin_layout Plain Layout
-
-#DF <- DF[DF$Test > 1.45,]
-\end_layout
-
-\begin_layout Plain Layout
-
-ff <- lm(AOAREFF ~ QRF, data=DF)
+ff <- lm(AOAREFF ~ 0 + QRF, data=DF)
 \end_layout
 
 \begin_layout Plain Layout
 
 cff <- coef(ff)
+\end_layout
+
+\begin_layout Plain Layout
+
+cff <- c(0, cff[1])
 \end_layout
 
 \begin_layout Plain Layout
@@ -2856,17 +2912,57 @@ lines (xf, yf, col='darkorange', lwd=2, lty=2)
 
 \begin_layout Plain Layout
 
+\end_layout
+
+\begin_layout Plain Layout
+
+@
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
+
+
+\backslash
+clearpage
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
+
+<<slow-component, include=TRUE, fig.height=5, fig.cap='The low-pass component
+ of the reference AOAREFS and the result from the fit to this component
+ for the five-coefficient fit, for ORCAS flight 6.'>>=
+\end_layout
+
+\begin_layout Plain Layout
+
+\end_layout
+
+\begin_layout Plain Layout
+
 fs <- lm(AOAREFS~QRS+I(QRS*MS)+MS+QCFS, data=DF)
 \end_layout
 
 \begin_layout Plain Layout
 
 cfs <- coef (fs)
-\end_layout
-
-\begin_layout Plain Layout
-
-SummarizeFit (fs)
 \end_layout
 
 \begin_layout Plain Layout
@@ -2884,6 +2980,43 @@ Data$AKS <- cfs[1] + cfs[2] * Data$QRS  + cfs[3] * Data$QRS * Data$MS +
 
 with (Data[Data$RF == 6, ], plotWAC (data.frame (Time, AOAREFS, AKS), ylab='slow
  component [deg.]'))
+\end_layout
+
+\begin_layout Plain Layout
+
+SummarizeFit (fs)
+\end_layout
+
+\begin_layout Plain Layout
+
+\end_layout
+
+\begin_layout Plain Layout
+
+@
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
+
+<<combined-result, include=TRUE, fig.cap='The vertical wind for ORCAS flight
+ 6, obtained by calculating the two filtered components separately and adding
+ them to obtain the angle of attack (red line).
+ Also shown is the fit result obtained using the five-coefficient fit from
+ the previous section (green line) and the result of filtering WIK (cyan
+ line).'>>=
+\end_layout
+
+\begin_layout Plain Layout
+
 \end_layout
 
 \begin_layout Plain Layout
@@ -3062,7 +3195,7 @@ Sexpr{round(cfs[4],4)}
 \begin_inset Formula $c_{0}$
 \end_inset
 
- is near zero as expected and should be omitted.
+ is forced zero as expected for a high-pass-filtered result.
  For the composite data set, both gave good fits, with residual standard
  deviations of 
 \begin_inset ERT
@@ -3106,7 +3239,7 @@ status open
 
 
 \backslash
-ref{fig:filterfit1}
+ref{fig:filterfit}
 \end_layout
 
 \end_inset
@@ -3124,7 +3257,7 @@ status open
 
 
 \backslash
-ref{fig:filterfit2}
+ref{fig:slow-component}
 \end_layout
 
 \end_inset
@@ -3142,7 +3275,7 @@ status open
 
 
 \backslash
-ref{fig:filterfit3}
+ref{fig:combined-result}
 \end_layout
 
 \end_inset
@@ -3219,6 +3352,22 @@ ref{fig:plotall1}
 \end_inset
 
 s) are removed, while they are retained in WIYS.
+\end_layout
+
+\begin_layout Standard
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
+
+
+\backslash
+clearpage
+\end_layout
+
+\end_inset
+
+
 \end_layout
 
 \begin_layout Standard
